[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "montydb"
version = "99.dev.0"
description = "Monty, Mongo tinified. MongoDB implemented in Python !"
authors = [
  { name = "davidlatwe", email = "davidlatwe@gmail.com" },
]
maintainers = [
  { name = "davidlatwe", email = "davidlatwe@gmail.com" },
]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
readme = "README.md"
requires-python = ">=3.7"
keywords = [ "monty", "montydb", "pymongo", "mongodb", "database", "embedded" ]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
]
dependencies = []

[project.optional-dependencies]
bson = [ "pymongo" ]
lmdb = [ "lmdb" ]

[project.urls]
Repository = "https://github.com/davidlatwe/montydb"
Source = "https://github.com/davidlatwe/montydb"
Tracker = "https://github.com/davidlatwe/montydb/issues"

[dependency-groups]
dev = [
  "bandit>=1",
  "codespell>=2",
  "lmdb>=1.5.1",
  "mongoengine",
  "pymongo==3.11.3",
  "pytest",
  "pytest-cov",
  "ruff",
  "toml",
]

[tool.ruff]
line-length = 88
exclude = [ ".venv", "venv" ]

[tool.ruff.lint]
extend-select = [
  "S",
  "SIM",
  "SLOT",
  "UP",
  "W",
]
ignore = [
  "S101",
  "SIM102",
  "UP015",
]

[tool.ruff.lint.extend-per-file-ignores]
"montydb/storage/sqlite.py" = [ "SIM117" ]

[tool.codespell]
skip = ".venv,venv,.git"
# MongoDB query operator: $nin
ignore-words-list = "nin"
