[metadata]
name = montydb
version = attr: montydb._version.__version__
description = Monty, Mongo tinified. MongoDB implemented in Python !
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidlatwe/montydb
author = davidlatwe
author_email = davidlatwe@gmail.com
maintainer = davidlatwe
maintainer_email = davidlatwe@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
    Topic :: Database
keywords = monty montydb mongo mongodb pymongo database
project_urls =
    Source=https://github.com/davidlatwe/montydb
    Tracker=https://github.com/davidlatwe/montydb/issues

[options]
zip_safe = true
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
tests_require =
    pytest-cov
    pymongo
    lmdb
    mongoengine

[options.packages.find]
exclude =
    tests*

[options.entry_points]

[options.package_data]

[options.extras_require]
bson =
    pymongo
lmdb =
    lmdb

[sdist]
formats = gztar

[bdist_wheel]
universal = true
